# AIH

./: README.md  main.py  pyproject.toml  testcases.txt
.cursor/rules/: baml.mdc  python.mdc
baml_client/: __init__.py  async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: agent_tools.baml  agent_workflow.baml  clients.baml  schema.baml
eval/: judge.py  samples.jsonl
src/: __init__.py  agent.py  config.py  dataset.py  kaggle_api.py  model.py  test_available_llms.py
src/api/: __init__.py  kaggle_api.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  model.py
src/utils/: helpers.py
